--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ h3,h2{
 h1,.nav-link{
   font-family: 'Montserrat', sans-serif;
 }
+.prev{
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  overflow-wrap: break-word;
+}
 #footer{
   text-align: center;
   font-family: 'Montserrat', sans-serif;
